--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,10 @@
+28 December 2023 - Tony Sanchez
+----------------------
+uBeeDisk v4.0.1
+
+* amendments to options.c to solve buffer over/under-run trap
+* amendments to Makefile to allow conditional compilation on MacOS
+
 4 February 2017 - uBee
 ----------------------
 uBeeDisk v4.0.0
